# theOneGit

./: .gitignore  BOARD.md  README.md  pyproject.toml  run-commands.sh
docs/: contribute.md
git-template/: BOARD.md  README.md  dot-gitignore  mkdocs.yml
git-template/docs/: index.md
git-template/slides/: example.md  style-imt.css  style-light.css
lib/: mycmd.py  ring.py
src/oneProject/: __init__.py  __main__.py  action.py  cmd.py  complete.py  html.py
src/oneRing/: __init__.py  cmd.py
src/theOneGit/: __main__.py  action.py
template-repo/: README.md
temprepo/: BOARD.md  README.md  mkdocs.yml  pyproject.toml
temprepo/style/: imt-slide.css
