[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oneRing"
version = "0.0.1"
authors = [
  { name="Guillaume Lozenguez", email="guillaume.lozenguez@imt-nord-europe.fr" },
]
description = "A project to rule them all"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["one", "two"]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux"
]

[project.scripts]
ring = "oneRing:__main__.commandHandler"

[project.urls]
Homepage = "https://imt-mobisyst.github.io/"
