[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "theOneGit"
version = "0.0.1"
authors = [
  { name="Guillaume Lozenguez", email="guillaume.lozenguez@imt-nord-europe.fr" },
]
description = "A git-project to rule them all"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["the one", "project manager"]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux"
]

[project.scripts]
tog = "theOneGit:__main__.commandHandler"

[project.urls]
Homepage = "https://imt-mobisyst.github.io/"
