[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "temprepo"
version = "0.0.1"
authors = [
  { name="Guillaume Lozenguez", email="guillaume.lozenguez@imt-nord-europe.fr" },
]
description = "A Template-Repository for Project"
keywords = ["the one", "git", "project manager"]
requires-python = ">=3.8"
dependencies = [ "zmq", "tqdm" ]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
readme = "README.md"

[project.scripts]
tempcmd = "tempopro:__main__.commandHandler"

[project.urls]
Homepage = "https://ktorz-net.github.io/"
